feat: gfc updated

--- a/admin/admin html/admin/admin_main.html
+++ b/admin/admin html/admin/admin_main.html
@@ -13,7 +13,7 @@
 
         <style>
 .welcome{
-    font-family: 'open sans'; 
+    font-family: 'open sans', sans-serif; 
     text-align: center;
     position: relative;
     top: 40px;
@@ -75,8 +75,8 @@ function signIn_admin(event) {
   event.preventDefault();
 
   // retrieve the entered login credentials
-  const loginId = document.getElementById("text_id").value;
-  const password = document.getElementById("password").value;
+//   const loginId = document.getElementById("text_id").value;
+//   const password = document.getElementById("password").value;
 
   // perform some validation on the entered credentials
   // ...
