--- a/admin/admin html/events/event-update.html
+++ b/admin/admin html/events/event-update.html
@@ -80,8 +80,8 @@
 
                     <!-- Div for UpcomingEvents -->
 
-                    <!-- <div class="new-upcoming" style="display: none;">
-                        <form role="form" class="form-for-admin">
+                     <div class="new-upcoming" style="display: none;">
+                      <form role="form" aria-label="" class="form-for-admin">
 
                         <label class="input-field">Unique ID</label>
                         <input type="text" id="unique_id_of_upcoming_event" required/>
@@ -117,7 +117,7 @@
                         <label class="input-field">Organizer Email</label>
                         <input type="email" id="upcoming-event-organizer-email">
         
-                        </form> -->
+                        </form> 
                 </div>
                     &nbsp;
                     <!-- button started -->
