--- a/pages/footer other pages/privacypolicy.html
+++ b/pages/footer other pages/privacypolicy.html
@@ -20,13 +20,90 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     </head>
     <body>
-        <div class="globalfuncitylogo" style="display: flex;
-padding: 8px;
-justify-content: center;">
+
+        <div class="header">
+            <div id="mySidenav" class="sidenav">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <a class="navigation__link" href="../../index.html">HOME</a>
+                <a class="active" href="../../pages/other pages/home.html"> ABOUT</a>
+                <a class="navigation__link" href="../../pages/other pages/events.html"> EVENTS  </a> 
+                <a class="navigation__link" href="../../pages/other pages/offer.html"> OFFERS  </a> 
+                <a class="navigation__link" href="../../pages/other pages/ticketprices.html"> TICKET  PRICES </a> 
+                <a class="navigation__link" href="../../pages/shop/shop.html"> SHOP </a> 
+                <a class="navigation__link" href="../../pages/other pages/attractions.html"> ATTRACTIONS </a> 
+                <a class="navigation__link" href="../../pages/other pages/contact.html"> CONTACT </a>
+                <hr>
+                <a href="../signup for booking/signup.html">BOOK TICKETS</a>
+                <hr>
+                <a href="../../pages/footer other pages/safetyofvisitors.html">Safety of visitors</a>
+                <a href="../../pages/footer other pages/rulesandregulations.html">Rules & Regulations</a>
+                <a href="../../pages/footer other pages/greeninitiatives.html">Green Initiatives</a>
+                <a href="../../pages/footer other pages/csrinitiatives.html">CSR Initiatives</a>
+                <hr>
+                <a href="../../pages/signup for booking/signup.html">Sign In</a> 
+            </div>
+            <div class="icon-bar">
+                <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+            </div>
+
             <a href="../../index.html">
-                <img src="../../assets/images/globalfuncitylogo.png" width="180px" alt="logo"> 
+                <img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo">
             </a>
+            <nav class="navbar">
+                <ul>
+                    <li>
+                        <a class="navigation__link" href="../../index.html">
+                            <b>HOME</b>
+                        </a> 
+                    </li>
+                    <li>
+                        <a class="navigation__link" href="../../pages/other pages/home.html">
+                            <b>ABOUT</b> 
+                        </a> 
+                    </li>
+                    <li>
+                        <a class="navigation__link" href="../../pages/other pages/events.html">
+                            <b>EVENTS </b> 
+                        </a> 
+                    </li>
+                    <li>
+                        <a class="navigation__link" href="../../pages/other pages/offer.html">
+                            <b>OFFERS </b> 
+                        </a> 
+                    </li>
+                    <li>
+                        <a class="navigation__link" href="../../pages/other pages/ticketprices.html">
+                            <b>TICKET  PRICES </b>
+                        </a> 
+                    </li>
+                    <li>
+                        <a class="navigation__link" href="../../pages/shop/shop.html">
+                            <b>SHOP</b>
+                        </a> 
+                    </li>
+                    <li>
+                        <a class="navigation__link" href="../../pages/other pages/attractions.html">
+                            <b>ATTRACTIONS </b>
+                        </a> 
+                    </li>
+                    <li>
+                        <a class="navigation__link" href="../../pages/other pages/contact.html">
+                            <b>CONTACT </b> 
+                        </a> 
+                    </li>
+	 
+                </ul>
+
+            </nav>
+            <div>
+                <a href="../../pages/other pages/booknow.html">
+                    <button>
+                        <b style="color: white;">  BOOK NOW </b> 
+                    </button> 
+                </a>
+            </div>
         </div>
+
         <div class="background-color">
             <!--background-->
     
@@ -212,6 +289,6 @@ justify-content: center;">
                 </p>
             </div>
         </footer>
-
+<script src="../../js/header.js"></script>
     </body>
 </html>	
