--- a/pages/homepage/main.profile.html
+++ b/pages/homepage/main.profile.html
@@ -9,6 +9,7 @@
 
         <title> Global Fun City </title>
         <link rel="stylesheet" href="../../assets/homepage css/main.profile.css">
+        <link rel="stylesheet" href="../../assets/homepage_css/footer_gfc.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -124,7 +125,7 @@
                 </span>
             </div>
             <!-- settings completed -->
-            <hr>
+            <hr class="hr-for-break">
 
             <!-- tickets -->
             <div class="settings">
@@ -150,7 +151,7 @@
                 </span>
             </div>
             <!-- tickets completed     -->
-            <hr>
+            <hr class="hr-for-break">
 
             <!-- orders -->
             <div class="settings">
@@ -176,7 +177,7 @@
                 </span>
             </div>
             <!-- orders completed         -->
-            <hr>
+            <hr class="hr-for-break">
 
             <!-- rooms -->
             <div class="settings">
@@ -185,7 +186,7 @@
                     <div class="account">
                         <h1>
                             <a href="../../pages/homepage/user_hotels.html">
-                                <i class="fa-solid fa-hotel"></i></i> &NonBreakingSpace; Claimed Rooms
+                                <i class="fa-solid fa-hotel"></i></i> &NonBreakingSpace; Booked Rooms
                             </a>
                         </h1>
                     </div>
@@ -202,10 +203,18 @@
                 </span>
             </div>
             <!-- rooms completed -->
-             <hr>             
+             <hr class="hr-for-break">             
         </div>
 
+        <br>
+    </br>
+
+    <footer class="footer_for_gfc">
+
+    </footer>
+
         <script src="../../js/header.js"></script>
+        <script src="../../js/footer-gfc.js"></script>
 
     </body>
 </html>
