--- a/pages/homepage/profile.html
+++ b/pages/homepage/profile.html
@@ -9,6 +9,7 @@
 
         <title> Global Fun City </title>
         <link rel="stylesheet" href="../../assets/homepage css/profile.css">
+        <link rel="stylesheet" href="../../assets/homepage_css/footer_gfc.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -202,7 +203,10 @@
 
         </div>
 
-        
+        <footer class="footer_for_gfc">
+
+        </footer>
+
         <script>
 // js for change image
 const loadFile = function (event) {
@@ -345,6 +349,7 @@ function deleteAcc(e) {
 </script>
 
 <script src="../../js/header.js"></script>
+<script src="../../js/footer-gfc.js"></script>
 
 </body>
 </html>
