--- a/pages/homepage/user_hotels.html
+++ b/pages/homepage/user_hotels.html
@@ -7,8 +7,9 @@
         <meta charset="UTF-8">
         <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
 
-        <title> Your Tickets | Global Fun City </title>
+        <title> Your Rooms | Global Fun City </title>
         <link rel="stylesheet" href="../../assets/homepage css/user_tickets.css">
+        <link rel="stylesheet" href="../../assets/homepage_css/footer_gfc.css">
         
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -185,6 +186,7 @@
 
 
 <script src="../../js/header.js"></script>
+<script src="../../js/footer-gfc.js"></script>
 
 <script>
 
