--- a/pages/homepage/user_orders.html
+++ b/pages/homepage/user_orders.html
@@ -9,6 +9,7 @@
 
         <title> Global Fun City </title>
         <link rel="stylesheet" href="../../assets/homepage css/user_orders.css">
+        <link rel="stylesheet" href="../../assets/homepage_css/footer_gfc.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -130,7 +131,13 @@
           </div> --> 
 
          </div> 
+
+         <footer class="footer_for_gfc">
+
+         </footer>
+
         <script src="../../js/header.js"></script>
+        <script src="../../js/footer-gfc.js"></script>
 
 <script>
     const gettingArrayProductUser = JSON.parse(localStorage.getItem("orderDataFromUser"));
