--- a/pages/homepage/user_tickets.html
+++ b/pages/homepage/user_tickets.html
@@ -9,6 +9,7 @@
 
         <title> Your Tickets | Global Fun City </title>
         <link rel="stylesheet" href="../../assets/homepage css/user_tickets.css">
+        <link rel="stylesheet" href="../../assets/homepage_css/footer_gfc.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -160,9 +161,13 @@
 
 </div>
 
+<footer class="footer_for_gfc">
+
+</footer>
 
 
 <script src="../../js/header.js"></script>
+<script src="../../js/footer-gfc.js"></script>
 <script>
     let unique = JSON.parse(localStorage.getItem("unique_id"));
     let ticketArray = JSON.parse(localStorage.getItem("bookingsConfirmFromTheUser"));
