--- a/pages/shop/accessories.html
+++ b/pages/shop/accessories.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
         <title> Shop - Global Fun City</title>
+        <link rel="stylesheet" href="../../assets/homepage_css/footer_shopglobal.css">
         <link rel="stylesheet" href="../../assets/store css/clothing.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -128,6 +129,10 @@
             </div>
         </div>
 
+        <footer class="footer_for_shopglobal">
+
+        </footer>
+
         <script>
 	const accessories_details = JSON.parse(localStorage.getItem("accessories_details"));
 	console.log(accessories_details);
@@ -165,5 +170,6 @@
         <script src="../../js/shop.js"></script>
         <script src="../../js/shop_alert_and_allow.js"></script>
         <script src="../../js/mybag_numbers.js"></script>
+        <script src="../../js/footer_shopglobal.js"></script>
     </body>
 </html>
