--- a/pages/upcoming events/folklore_festivel.html
+++ b/pages/upcoming events/folklore_festivel.html
@@ -19,21 +19,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     </head>
     <body>
-        <div class="visit-signin">
 
-            <div class="visit-global">
-                <p>	Visit global1.com</p>
-            </div>	
-		
-            <div class="sign-in">
-                <p>
-                    <a href="../../pages/signup for booking/signup.html"> Sign In </a>
-                    |<a href="../signup for booking/create-an-account.html"> Create Account</a>
-                    | <i class="fa-solid fa-globe"></i> United states (English)
-                </p>
-            </div>
-		
-        </div>
         <div class="header">
             <a href="../../index.html">
                 <img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo">
@@ -563,5 +549,6 @@ setInterval(() => {
   second.innerHTML = secondsLeft;
 }, 1000);
 </script>
+<script src="../../js/header.js"></script>
     </body>
 </html>
