--- a/admin/admin html/events/event-upload.html
+++ b/admin/admin html/events/event-upload.html
@@ -120,9 +120,10 @@
             </div>
         </section>
 
-        <!-- <div class="event-show"> Events</div> -->
 
-        <script>//Changing for Upcoming Events
+
+        <script>
+        //Changing for Upcoming Events
         const eventUpcoming = document.querySelector(".input_field");
         eventUpcoming.addEventListener("click", showform);
 
@@ -210,7 +211,7 @@
         (data) => data.upcoming_event_details == upcoming_event_details
       );
       if (!exit) {
-                //if(upcoming_event_name !== "" ){
+                
                 upcoming_event_details.push({
                   upcoming_event_name,
                   upcoming_event_img,
@@ -239,7 +240,7 @@
           }
         );
 
-        //console.log("hello world");
+
     </script>
         <script src="https://cdn.jsdelivr.net/npm/uuid@8.3.2/dist/umd/uuidv4.min.js"></script>
     </body>
